docker-compose.yaml

--- a/orng-auth-service/src/main/resources/application.properties
+++ b/orng-auth-service/src/main/resources/application.properties
@@ -72,7 +72,7 @@ spring.liquibase.change-log=classpath:db/changelog.yaml
 #
 # Logging
 #
-logging.level.root=${LOGGING_LEVEL_DEFAULT:INFO}
+logging.level.root=${LOGGING_LEVEL_DEFAULT:TRACE}
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
 logging.level.org.postgresql=WARN
