--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,24 @@ version: '3.9'
 
 services:
 
-#  orng-auth:
-#    hostname: ${AUTH_CONTAINER_HOST:orng-auth}
-#    build:
-#      context: .
-#      dockerfile: ./Dockerfile
-#    image: orng-auth:${APP_VERSION:-latest}
-#    restart: always
-#    env_file:
-#      - .env
+  orng-auth:
+    image: orng-auth:${APP_VERSION:-latest}
+    build:
+      context: .
+    container_name: orng-auth
+    restart: always
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env
+    depends_on:
+      - database
 
 
   database:
     image: 'postgres:18-alpine'
     container_name: 'postgres-db'
+    restart: always
     environment:
       - POSTGRES_USER=orng
       - POSTGRES_PASSWORD=orng
