--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,15 @@ version: '3.9'
 services:
 
   orng-auth:
-    image: orng-auth:${APP_VERSION:-latest}
-    build:
-      context: .
+    image: bitmaximum/orng-auth:latest
     container_name: orng-auth
     restart: always
     ports:
       - "8080:8080"
-    env_file:
-      - .env
+    environment:
+      DB_URL: jdbc:postgresql://database:5432/orng?currentSchema=orng_auth
+      DB_USER: orng
+      DB_PASS: orng
     depends_on:
       - database
 
@@ -26,11 +26,6 @@ services:
       - POSTGRES_DB=orng
     volumes:
       - db:/var/lib/postgresql/data postgres
-    # Скрипт для инициализации, скорее всего для demo стенда
-    #    volumes:
-    #      - type: bind
-    #        source: ./init.sql
-    #        target: /docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
 
